# pepper

./: .env.example  .gitignore  ONBOARDING.md  README.md  justfile  pyproject.toml
src/pepper/: __init__.py
src/pepper/archive/: __init__.py  cli.py  config.py  errors.py  logging.py  pipeline.py
src/pepper/archive/analysis/: __init__.py  frame.py  graph.py  linguistic.py  runner.py  stats.py  topics.py
src/pepper/archive/context/: __init__.py  fetch.py
src/pepper/archive/llm/: __init__.py  batch.py  client.py  corpus.py  cost.py  dossier.py  prompts.py
src/pepper/archive/media/: __init__.py  download.py  extract.py  store.py
src/pepper/archive/models/: __init__.py  enums.py  ids.py  item.py  media.py  provenance.py
src/pepper/archive/net/: __init__.py  client.py  ratelimit.py  retry.py
src/pepper/archive/normalize/: __init__.py  clean.py  gdpr_map.py  reddit_map.py
src/pepper/archive/report/: __init__.py  charts.py  dashboard.py  markdown.py
tests/: conftest.py  test_analysis.py  test_context.py  test_cost.py  test_export.py  test_ids.py  test_llm_normalize.py  test_media_extract.py  test_merge.py  test_normalize.py  test_ratelimit.py  test_repo_upsert.py  test_report.py  test_sources.py  test_webexport.py
web/: .env.example  README.md  package-lock.json  package.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/components/: KarmaTicker.tsx  PepperGlyph.tsx  Section.tsx  SiteFooter.tsx  SiteNav.tsx
web/src/data/: analysis.json  examples.json  hall_of_fame.json  media.json  persona.json  profile.json  timeline.json
web/src/lib/: apifyReddit.ts  browse.ts  data.ts  format.ts  kv.ts  ratelimit.ts  reddit.ts  types.ts
(+94 files in other folders)
