[project]
name = "pepper"
version = "0.1.0"
description = "Complete Reddit user archive and persona profiler (feeds the pepper bot)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Eric Hare" }]

dependencies = [
    "typer>=0.12,<1.0",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.3,<3.0",
    "httpx>=0.27,<1.0",
    "praw>=7.7,<8.0",
    "tenacity>=8.4,<10.0",
    "polars>=1.0,<2.0",
    "pyarrow>=16.0",
    "duckdb>=1.0",
    "yt-dlp>=2024.7.1",
    "gallery-dl>=1.27",
    "anthropic>=0.34,<1.0",
    "jinja2>=3.1,<4.0",
    "plotly>=5.22,<6.0",
    "textstat>=0.7,<1.0",
    "structlog>=24.1",
    # graph + linguistics are core-enough for the default profile experience
    "networkx>=3.3",
    "nltk>=3.8",
    "scikit-learn>=1.5",
]

[project.optional-dependencies]
nlp-advanced = ["spacy>=3.7"]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-httpx>=0.30",
    "freezegun>=1.5",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
pepper = "pepper.archive.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pepper"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501", "SIM905"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
